@@ -18,4 +18,7 @@ $KKMSG -k $INSTANCE -f
 ($KKEDIT -i $INSTANCE) &
 
 #open session 2
-$KKMSG -k $INSTANCE -s "RestoreSession:${HOME}/.KKEdit/plugins-gtk/session-2" -a
+#restore from session file
+#$KKMSG -k $INSTANCE -s "RestoreSession:${HOME}/.KKEdit/plugins-gtk/session-2" -a
+#restore via session menu
+$KKMSG -k $INSTANCE -s "ActivateMenuNamed:2-RestoreSession" -a
